# DescartApp

./: .env.local  .gitignore  Dockerfile  Dockerfile.local  README.md  cloudbuild.yaml  docker-compose.yaml  manage.py  pyproject.toml
apps/collect/: forms.py  models.py  urls.py  views.py
apps/collect/migrations/: 0001_initial.py  0002_auto_20220928_2100.py  0003_demand_status_alter_address_excluded_by_and_more.py  0004_alter_demand_status_and_more.py
apps/collect/views/: __init__.py  address_view.py  base_view.py  demand_view.py
apps/core/: forms.py  models.py  models_managers.py  urls.py  views.py  views_mixins.py
apps/core/migrations/: 0001_initial.py  0002_alter_collector_excluded_by_and_more.py
apps/discard/: apps.py  forms.py  models.py  urls.py  views.py
apps/discard/migrations/: 0001_initial.py  0002_order_status_alter_order_excluded_by.py  0003_order_discarder.py  0004_alter_order_status.py
descartapp/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: home.html
templates/address/: form.html  list.html  new.html
templates/demand/: demand_address.html  form.html  list.html  new.html  order_list.html
templates/includes/: footer-fullscreen.html  footer.html  navigation-fullscreen.html  navigation.html  sidenav.html
templates/layouts/: base-fullscreen.html  base.html
templates/order/: demand_address.html  demand_list.html  form.html  list.html
templates/user/: login.html  signup.html  signup_collector.html  signup_discarder.html
