[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "DescartApp"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "4.0"
python = "^3.8"
django-slugger = "^1.1.2"
django-crispy-forms = "^1.13.0"
Pillow = "^9.2.0"
psycopg2-binary = "^2.9.3"
django-environ = "^0.9.0"
google-cloud-secret-manager = "^2.12.5"
django-storages = {extras = ["google"], version = "^1.13.1"}
gunicorn = "^20.1.0"
django-cors-headers = "^3.13.0"
[tool.poetry.dev-dependencies]
